[:has() pseudo-class] Invalidation in non-subject position https://bugs.webkit.org/show_bug.cgi?id=233758

Reviewed by Simon Fraser.

LayoutTests/imported/w3c:

* web-platform-tests/css/selectors/invalidation/has-in-adjacent-position-expected.txt: Added.
* web-platform-tests/css/selectors/invalidation/has-in-adjacent-position.html: Added.
* web-platform-tests/css/selectors/invalidation/has-in-ancestor-position-expected.txt: Added.
* web-platform-tests/css/selectors/invalidation/has-in-ancestor-position.html: Added.
* web-platform-tests/css/selectors/invalidation/has-in-parent-position-expected.txt: Added.
* web-platform-tests/css/selectors/invalidation/has-in-parent-position.html: Added.
* web-platform-tests/css/selectors/invalidation/has-in-sibling-position-expected.txt: Added.
* web-platform-tests/css/selectors/invalidation/has-in-sibling-position.html: Added.

Source/WebCore:

Invalidation for selectors like '.ancestor:has(.foo) #target'.

Tests: imported/w3c/web-platform-tests/css/selectors/invalidation/has-in-adjacent-position.html
       imported/w3c/web-platform-tests/css/selectors/invalidation/has-in-ancestor-position.html
       imported/w3c/web-platform-tests/css/selectors/invalidation/has-in-parent-position.html
       imported/w3c/web-platform-tests/css/selectors/invalidation/has-in-sibling-position.html

* style/ChildChangeInvalidation.cpp:
(WebCore::Style::ChildChangeInvalidation::invalidateForChangedElement):
(WebCore::Style::needsTraversal):
(WebCore::Style::needsDescendantTraversal):
* style/RuleFeature.cpp:
(WebCore::Style::isSiblingOrSubject):
(WebCore::Style::isHasPseudoClassMatchElement):
(WebCore::Style::computeHasPseudoClassMatchElement):
(WebCore::Style::computeSubSelectorMatchElement):

Use new MatchElement::HasNonSubject as a catch-all for cases where :has() is in a non-subject position.
In the future this can be optimized better by computing both the :has match element and the overall
match element separately.

* style/RuleFeature.h:
* style/StyleInvalidator.cpp:
(WebCore::Style::Invalidator::invalidateStyleWithMatchElement):

Worst-case invalidation.



Canonical link: https://commits.webkit.org/244779@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@286433 268f45cc-cd09-0410-ab3c-d52691b4dbfc